--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -3,8 +3,11 @@ name: .NET Core
 on:
   push:
     branches: [ master ]
+    paths: 'lib/*'
   pull_request:
     branches: [ master ]
+
+      
 
 jobs:
   build:
